--- a/index.html
+++ b/index.html
@@ -6,17 +6,21 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Cube easy</title>
+        <title>The Cuboid, Art Gallery</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" media="screen" href="css/cube.css">
         <script src="http://jsrun.it/assets/C/x/Z/D/CxZDA"></script>
     </head>
     <body>
-        <header></header>
+        <header>
+            <h1>The Cuboid</h1>
+            <h2>Art Gallery</h2>
+        </header>
         <section id="instructions">
-            To rotate the cube, press the arrow keys:<br>
-                    Up, down, left, right
+            <p>To rotate the cube, press the arrow keys:</p>
+            <p>Up, down, left, right</p>
+                    
         </section>
         <div id="experiment">
             <div id="cube">
@@ -36,7 +40,7 @@ and open the template in the editor.
                     
                 </div>
                 <div class="face bottom">
-                   <a href="http://www.facebook.com/thecuboid" target="_blank">Tom Puiwa</a>
+                   <a href="https://www.facebook.com/tom.puiwa" target="_blank">Tom Puiwa</a>
                 </div>
             </div>
         </div>
