--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ and open the template in the editor.
                     <a href="http://www.facebook.com/thecuboid" target="_blank">The Cuboid</a>
                 </div>
                 <div class="face front">
-                    
+                    Meet the Artists!
                 </div>
                 <div class="face right">
                     
