--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ and open the template in the editor.
                     <a href="http://www.facebook.com/thecuboid" target="_blank">The Cuboid</a>
                 </div>
                 <div class="face front">
-                    Meet the Artists!
+                    <a href="https://www.facebook.com/clavathescout" target="_blank">Clava the Scout</a>
                 </div>
                 <div class="face right">
                     About us, some storytelling
@@ -37,7 +37,7 @@ and open the template in the editor.
                     Around the Cuboid
                 </div>
                 <div class="face left">
-                    
+                    Meet the Artists!
                 </div>
                 <div class="face bottom">
                    <a href="https://www.facebook.com/tom.puiwa" target="_blank">Tom Puiwa</a>
