--- a/index.html
+++ b/index.html
@@ -1,49 +1,55 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
-        <title>The Cuboid, Art Gallery</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" media="screen" href="css/cube.css">
-        <script src="http://jsrun.it/assets/C/x/Z/D/CxZDA"></script>
-    </head>
-    <body>
-        <header>
-            <h1>The Cuboid</h1>
-            <h2>Art Gallery</h2>
-        </header>
-        <section id="instructions">
-            <p>To rotate the cube, press the arrow keys:</p>
-            <p>Up, down, left, right</p>
-            
-        </section>
-        <div id="experiment">
-            <div id="cube">
-                <div class="face top">
-                    <a href="http://www.facebook.com/thecuboid" target="_blank">The Cuboid</a>
-                </div>
-                <div class="face front">
-                    <a href="https://www.facebook.com/clavathescout" target="_blank">Clava the Scout</a>
-                </div>
-                <div class="face right">
-                    About us, some storytelling
-                </div>
-                <div class="face back">
-                    Around the Cuboid
-                </div>
-                <div class="face left">
-                    Meet the Artists!
-                </div>
-                <div class="face bottom">
-                   <a href="https://www.facebook.com/tom.puiwa" target="_blank">Tom Puiwa</a>
-                </div>
-            </div>
-        </div>
-        <script src="javascripts/cube.js"></script>
-    </body>
-</html>
+
+        <title>The Cuboid</title>
+
+        <!-- Metadata -->
+
+        <meta charset="utf-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+                <meta http-equiv="Content-Language" content="en" />
+                <meta name="description" content="The Cuboid, Art Gallery" />
+                <meta name="author" content="Felix M" />
+                <meta name="keywords" content="The Cuboid, Art, Artists, MAP, Tacheles, Berlin" />
+
+                <meta name="description" content="">
+                    <meta name="viewport" content="width=device-width">
+
+                        <!-- CSS -->
+
+                        <link type="text/css" rel="stylesheet" href="css/main.css" />
+
+
+                        <!-- FONTS -->
+
+
+                        <!-- SCRIPTS -->
+
+
+                        </head>
+
+                        <body>
+                            <header>
+                                <h1>Welcome in the cuboid</h1>
+                                <h2>Click in the building to enter</h2>
+                            </header>
+                            <svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 3872 2592" xmlns:dc="http://purl.org/dc/elements/1.1/">
+                                <style type="text/css">
+                                    <![CDATA[
+                                    rect {
+                                        fill:   rgba(0,0,0,0.1);
+                                    }
+                                    rect:hover {
+                                        fill:   rgba(40,40,40,0.3);
+                                    }
+                                    ]]>
+                                </style>
+                                <g>
+                                    <image xlink:href="img/front.JPG"  height="2592" width="3872" y="0" x="0"/>
+                                    <a xlink:href="./coins.html">
+                                        <rect x="166.62" y="469.22" width="2174.3" height="900"/>
+                                    </a>
+                                </g>
+                            </svg>
+
+                        </body>
